e2e/testdata/hydration/compiled/kustomize-components/tenant-c/networkpolicy_deny-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    config.kubernetes.io/origin: |
      path: base/networkpolicy.yaml
  labels:
    test-case: hydration
  name: deny-all
  namespace: tenant-c
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector:
    matchLabels: null
